# IBKR-API-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  log_config.yml  rustfmt.toml
.github/workflows/: rust.yml
config/: config.json
examples/: defaults.rs  fa_allocation_samples.rs  mod.rs  order_samples.rs  test_helpers.rs
src/: bin.rs  lib.rs
src/client/: client.rs  common.rs  connection.rs  contract.rs  decoder.rs  defaults.rs  errors.rs  execution.rs  messages.rs  mod.rs  order.rs  order_condition.rs  order_decoder.rs  reader.rs  scanner.rs  server_versions.rs  transport.rs  wrapper.rs
src/core/: account_summary_tags.rs  algo_params.rs  client.rs  common.rs  connection.rs  contract.rs  decoder.rs  errors.rs  execution.rs  messages.rs  mod.rs  order.rs  order_condition.rs  order_decoder.rs  reader.rs  scanner.rs  server_versions.rs  streamer.rs  transport.rs  wrapper.rs
src/examples/: contract_samples.rs  defaults.rs  fa_allocation_samples.rs  main.rs  mod.rs  order_samples.rs  scanner_subscription_samples.rs  test_helpers.rs
src/tests/: mod.rs  test_eclient.rs  test_messages.rs
