[package]
name = "IBKR-API-Rust"
version = "0.1.1"
authors = ["brett.miller@sparkstart.com"]
edition = "2018"

[lib]
name = "twsapi"
path = "src/lib.rs"

[[bin]]
name = "twsapi_client"
path = "src/bin/manual_tests.rs"

[dependencies]
bzip2 = "0.4.3"
log = "0.4.14"
log4rs = "1.0.0"
bytebuffer = "0.2.1"
encoding = "0.2.33"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
byteorder = "1.4.3"
ascii = "1.0.0"
from-ascii = "0.0.1"
serde = { version = "1.0.130", features = ["derive"] }
bigdecimal = "0.3.0"
float-cmp = "0.9.0"
chrono = "0.4.19"
