[package]
name = "twsapi"
version = "0.1.1"
authors = ["brett.miller@sparkstart.com"]
edition = "2021"

[lib]
name = "twsapi"
path = "src/lib.rs"

[[bin]]
name = "twsapi_client"
path = "src/bin/manual_tests.rs"

[dependencies]
ascii = "1.0.0"
bigdecimal = "0.3.0"
color-eyre = "0.5.11"
chrono = "0.4.19"
bytebuffer = "0.2.1"
byteorder = "1.4.3"
bzip2 = "0.4.3"
encoding = "0.2.33"
float-cmp = "0.9.0"
from-ascii = "0.0.1"
log = "0.4.14"
log4rs = "1.0.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.130", features = ["derive"] }
