[package]
name = "IBKR-API-Rust"
version = "0.1.0"
authors = ["brett.miller@sparkstart.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "twsapi"
path = "src/lib.rs"

[[bin]]
name = "twsapi_client"
path = "src/bin/manual_tests.rs"

[dependencies]
bzip2 = "0.4"
log = "0.4.8"
bytebuffer = "2.1"
encoding = "0.2"
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2.12"
byteorder = "1.3.4"
ascii = "1.0.0"
from-ascii = "0.0.1"
serde = { version = "1.0", features = ["derive"] }
bigdecimal = "0.3"
float-cmp = "0.9.0"
chrono = "0.4.11"
